<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jobPortal.activities.admin.CompanyInfoActivity" >

    <Button
        android:id="@+id/btnDeleteCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="deleteCompany"
        android:text="@string/del_cmny" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDeleteCompany"
        android:layout_alignLeft="@+id/btnDeleteCompany"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnDeleteCompany" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmny_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewCompanyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Creative System Ltd"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmny_email"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewCompanyEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="creative_sys34@gmail.com"
                android:textAppearance="?android:attr/textAppearanceMedium" />

             <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type of company"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewCompanyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Private"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
             <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Required qualification"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewCompanyQualification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M.Tech,B.E."
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_placement"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewDOP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="17th Aug 2010"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary_package"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewSalary_package"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Computer Science"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_registration"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewCRegistrationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15th Jan 2014"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_status"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewCActivationStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Activated"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>