<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.jobPortal.slidingmenu"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/student_reg_screen"
    android:orientation="vertical"
    tools:context="com.jobPortal.activities.company.CompanyRegisterActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="487dp"
        android:orientation="vertical"
        android:padding="5dip" >

        <!-- View Title Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/register"
            android:textColor="@color/counter_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- Name Label -->

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="300dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- Email Label -->

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/stud_email"
                    android:textColor="@color/list_divider" />

                <!-- Email TextField -->

                <com.jobPortal.library.EditTextWithDeleteButton
                    android:id="@+id/registerEmailStudent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textfield_bg"
                    android:ems="10"
                    android:orientation="horizontal"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    custom:deleteButtonRes="@drawable/text_field_clear_btn" />

                <Button
                    android:id="@+id/btnGenerateAutoKey"
                    style="@+style/emi_calculate_button_font"
                    android:onClick="generateKey"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="Generate Key" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/student_key_generation"
                    android:textColor="@color/list_divider" />

                <!-- Key TextField -->

                <com.jobPortal.library.EditTextWithDeleteButton
                    android:id="@+id/textGeneratedKey"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textfield_bg"
                    android:ems="10"
                    android:inputType="number"
                    android:orientation="horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    custom:deleteButtonRes="@drawable/text_field_clear_btn" />

                <!-- Password Label -->

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/password"
                    android:textColor="@color/list_divider" />

                <!-- Password TextField -->

                <com.jobPortal.library.EditTextWithDeleteButton
                    android:id="@+id/registerPasswordStudent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textfield_bg"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:orientation="horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    custom:deleteButtonRes="@drawable/text_field_clear_btn" />

                <!-- Password Label -->

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/repassword"
                    android:textColor="@color/list_divider" />

                <!-- Password TextField -->

                <com.jobPortal.library.EditTextWithDeleteButton
                    android:id="@+id/registerRePasswordStudent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textfield_bg"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:orientation="horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    custom:deleteButtonRes="@drawable/text_field_clear_btn" />

                <!-- Error message -->

            </LinearLayout>
        </ScrollView>
        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegisterStudent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@layout/button001"
            android:text="@string/register" />

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/register_error_student"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLinkToLoginScreenStudent"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="@null"
            android:text="@string/already_registered"
            android:textColor="@color/list_divider"
            android:textColorHint="@color/counter_text_bg"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>